package orm.dsl;

public interface QueryExtractor {
    String extractSql();
}
