package orm.dsl.ddl;

public interface CreateTableStep extends DDLTableIfNotExistStep {

}
