package orm.dsl.step.dml;

import orm.QueryExecutor;
import orm.dsl.QueryBuilder;

public interface ConditionStep extends QueryBuilder, QueryExecutor {

}
