package orm.dsl.step.dml;

public interface DeleteFromStep extends WhereStep {
     ConditionStep byId(Object id);
}
