package orm.dsl.step.dml;

public interface InsertIntoStep extends InsertIntoValuesStep, BulkInsertIntoValuesStep {

}
